add /api/v2/shares apis
